kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 135
expression: "crate::tests::parsing_expr_string(r#\"s {\"#)"
---
Node {
    node: Schema(
        SchemaExpr {
            name: Node {
                node: Identifier {
                    names: [
                        "s",
                    ],
                    pos: [
                        Node {
                            node: (),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            args: [],
            kwargs: [],
            config: Node {
                node: Config(
                    ConfigExpr {
                        items: [],
                    },
                ),
                filename: "",
                line: 1,
                column: 2,
                end_line: 1,
                end_column: 3,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}

