kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_recovery_5.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 140
expression: "crate::tests::parsing_expr_string(r#\"s( {a=1}\"#)"
---
Node {
    node: Call(
        CallExpr {
            func: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "s",
                        ],
                        pos: [
                            Node {
                                node: (),
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            args: [
                Node {
                    node: Config(
                        ConfigExpr {
                            items: [
                                Node {
                                    node: ConfigEntry {
                                        key: Some(
                                            Node {
                                                node: Identifier(
                                                    Identifier {
                                                        names: [
                                                            "a",
                                                        ],
                                                        pos: [
                                                            Node {
                                                                node: (),
                                                                filename: "",
                                                                line: 1,
                                                                column: 4,
                                                                end_line: 1,
                                                                end_column: 5,
                                                            },
                                                        ],
                                                        pkgpath: "",
                                                        ctx: Load,
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 4,
                                                end_line: 1,
                                                end_column: 5,
                                            },
                                        ),
                                        value: Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 6,
                                            end_line: 1,
                                            end_column: 7,
                                        },
                                        operation: Override,
                                        insert_index: -1,
                                    },
                                    filename: "",
                                    line: 1,
                                    column: 4,
                                    end_line: 1,
                                    end_column: 7,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 3,
                    end_line: 1,
                    end_column: 8,
                },
            ],
            keywords: [],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 8,
}

