kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_stmt_recovery_11.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 196
expression: "crate::tests::parsing_module_string(r#\"schema A:\n[str]: str = \"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: "",
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 2,
            end_column: 0,
        },
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Identifier {
                                names: [],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 2,
                            column: 0,
                            end_line: 2,
                            end_column: 5,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 2,
                        column: 11,
                        end_line: 2,
                        end_column: 13,
                    },
                    type_annotation: Some(
                        Node {
                            node: "str",
                            filename: "",
                            line: 2,
                            column: 7,
                            end_line: 2,
                            end_column: 10,
                        },
                    ),
                    ty: Some(
                        Node {
                            node: Basic(
                                Str,
                            ),
                            filename: "",
                            line: 2,
                            column: 7,
                            end_line: 2,
                            end_column: 10,
                        },
                    ),
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 2,
            end_column: 12,
        },
    ],
    comments: [],
}

